# biosimdb-app

./: .gitignore  README.md  pyproject.toml
biosimdb_app/: __init__.py
biosimdb_app/data/: __init__.py  dataSearcher.py  dataUploader.py  dataViewer.py  inspect_aiida_db.py  showprovenance.py  simulationParser.py
biosimdb_app/form/: __init__.py  webform.py
biosimdb_app/main/: __init__.py  head.py
biosimdb_app/templates/content/: contact.html  help.html  home.html
biosimdb_app/templates/data/: attributes.html  entry.html  molstar.html  pagination.html  search_results.html  showdata.html  showprovenance.html
biosimdb_app/templates/form/: webform.html
biosimdb_app/templates/main/: footer.html  head.html  nav.html
biosimdb_app/templates/styles/: styles.css
biosimdb_app/utils/: db.py  schema.sql
docker/: Dockerfile  gunicorn_config.py
